# avocado-allegory

./: README.md  app.py  pyproject.toml  sandbox_app.py  scratchpad.py  simulate_N_times.py  tuning_df.csv  tuning_df_a_close_call.csv  tuning_df_backup.csv
.streamlit/: config.toml
data/: condorcet_param_space_for_recovering_winner_total_guacs20_a-close-call_20220318.csv  condorcet_param_space_for_recovering_winner_total_guacs20_a-close-call_fullness_factor_20220318.csv  condorcet_param_space_for_recovering_winner_total_guacs20_a-lot-of-contenders_20220318.csv  condorcet_param_space_for_recovering_winner_total_guacs20_a-lot-of-contenders_fullness_factor_20220318.csv  condorcet_param_space_for_recovering_winner_total_guacs20_one-clear-winner_20220318.csv  condorcet_param_space_for_recovering_winner_total_guacs20_one-clear-winner_fullness_factor_20220318.csv  param_space_for_recovering_winner_total_guacs20_a-close-call_20220311.csv  param_space_for_recovering_winner_total_guacs20_a-close-call_fullness_factor_20220315.csv  param_space_for_recovering_winner_total_guacs20_a-lot-of-contenders_20220311.csv  param_space_for_recovering_winner_total_guacs20_a-lot-of-contenders_fullness_factor_20220315.csv  param_space_for_recovering_winner_total_guacs20_one-clear-winner_20220311.csv  param_space_for_recovering_winner_total_guacs20_one-clear-winner_fullness_factor_20220315.csv  simulate_100_times_sum.csv  sum_param_space_for_recovering_winner_total_guacs20_a-close-call_20220318.csv  sum_param_space_for_recovering_winner_total_guacs20_a-close-call_fullness_factor_20220318.csv  (+4 more)
(+14 files in other folders)
