[tool.poetry]
name = "avocados"
version = "0.1.0"
description = "A guided simulation exploring a clever voting system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.6.0"
pandas = "1.3.5"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
